git branch sneha

--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
     <h1>Hello Sneha
 
     </h1>
+    <h1>
+        Sneha branch changes
+    </h1>
+    
     <h2>new branch new changes</h2>
 </body>
 </html>
